<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="#000000">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/bebe"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-black"
        android:text=" restaurants"
        android:textColor="@color/colorTextIcons"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditText"
        android:background="@color/colorTextIcons"
        android:layout_above="@+id/findButton"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:hint="Enter any city  "
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/findButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:background="@color/colorAccent"
        android:text="Find restaurant"
        android:textColor="@color/colorTextIcons" />



</RelativeLayout>